WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57224
[Qt] QtTestBrowser doesn't reset its window title when opening about:blank
https://bugs.webkit.org/show_bug.cgi?id=57224
Summary
[Qt] QtTestBrowser doesn't reset its window title when opening about:blank
Andreas Kling
Reported
2011-03-28 05:34:09 PDT
1. Go to google.com 2. Go to about:blank 3. Cry your heart out, because the title bar still says "Google" :'(
Attachments
Proposed patch
(2.09 KB, patch)
2011-03-28 05:35 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2011-03-28 05:35:01 PDT
Created
attachment 87129
[details]
Proposed patch
Benjamin Poulain
Comment 2
2011-03-28 05:40:55 PDT
Empty changelog? :)
Andreas Kling
Comment 3
2011-03-28 05:41:15 PDT
Comment on
attachment 87129
[details]
Proposed patch Clearing flags on attachment: 87129 Committed
r82109
: <
http://trac.webkit.org/changeset/82109
>
Andreas Kling
Comment 4
2011-03-28 05:41:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug