2011-03-28  Andreas Kling  <kling@webkit.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] QtTestBrowser doesn't reset its window title when opening about:blank
        https://bugs.webkit.org/show_bug.cgi?id=57224

        * QtTestBrowser/mainwindow.cpp:
        (MainWindow::buildUI):
        (MainWindow::onTitleChanged):
        * QtTestBrowser/mainwindow.h:


Canonical link: https://commits.webkit.org/71911@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82109 268f45cc-cd09-0410-ab3c-d52691b4dbfc